packages/webassemblyjs/test/fixtures/type-errors/set-global-mismatch/exec.tjs
it("should throw an error during instantiation when type checking fails", () => {
  assert.throws(
    () => WebAssembly.instantiateFromSource(watmodule),
    "Global 0 is immutable"
  );
});
